# Neural-Net

./: CMakeLists.txt
Documentation/: CD_NodeNetwork.puml
Notes/: Links - Neural Networks  Links - Threading
Project/: CMakeLists.txt  main.cpp
Project/Core/: CMakeLists.txt
Project/Core/ModuleManager/: ModuleManager.cpp  ModuleManager.h
Project/Core/NeuralNetwork/: CMakeLists.txt  IrisDataExtractor.cpp  IrisDataExtractor.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkFactory.cpp  NeuralNetworkFactory.h  NeuralNetworkLayer.cpp  NeuralNetworkLayer.h  NeuralNetworkManager.cpp  NeuralNetworkManager.h  NeuralNetworkTester.cpp  NeuralNetworkTester.h  Neuron.cpp  Neuron.h  NeuronConnection.cpp  NeuronConnection.h
Project/Core/NodeNetwork/: CMakeLists.txt  Node.cpp  Node.h  NodeConnection.cpp  NodeConnection.h  NodeGroup.cpp  NodeGroup.h  NodeNetwork.cpp  NodeNetwork.h  NodeNetworkFactory.cpp  NodeNetworkFactory.h  NodeNetworkLayer.cpp  NodeNetworkLayer.h
Project/Shared/: CMakeLists.txt
Project/Shared/Communicator/: CMakeLists.txt  Communicator.cpp  Communicator.h
Project/Shared/NeuralNetwork/: CMakeLists.txt  Defines.h
Project/Shared/NodeNetwork/: AbstractNode.cpp  AbstractNode.h  AbstractNodeConnection.cpp  AbstractNodeConnection.h  AbstractNodeNetwork.cpp  AbstractNodeNetwork.h  AbstractNodeNetworkFactory.cpp  AbstractNodeNetworkFactory.h  AbstractNodeNetworkLayer.cpp  AbstractNodeNetworkLayer.h  CMakeLists.txt  NodeNetworkFactory.cpp  NodeNetworkFactory.h  NodeNetworkManager.cpp  NodeNetworkManager.h
Project/UI/: CMakeLists.txt
Project/UI/Application/: Application.cpp  Application.h  ApplicationView.cpp  ApplicationView.h  CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  CentralWidgetView.cpp  CentralWidgetView.h  NeuralNetworkRunWidget.cpp  NeuralNetworkRunWidget.h  NeuralNetworkRunWidget.ui  NeuralNetworkRunWidgetView.cpp  NeuralNetworkRunWidgetView.h  NeuralNetworkTestWidget.cpp  NeuralNetworkTestWidget.h  NeuralNetworkTestWidget.ui  NeuralNetworkTestWidgetView.cpp  NeuralNetworkTestWidgetView.h  RightDockWidget.cpp  RightDockWidget.h  RightDockWidgetView.cpp  RightDockWidgetView.h
Project/UI/GraphicsItem/: AbstractGraphicsItemController.cpp  AbstractGraphicsItemController.h  CMakeLists.txt
Project/UI/NeuralNet/: CMakeLists.txt
Project/UI/NeuralNet/Neuron/: CMakeLists.txt  Neuron.cpp  Neuron.h  NeuronView.cpp  NeuronView.h
Project/UI/NodeNetwork/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkFactory.cpp  NeuralNetworkFactory.h  NeuralNetworkLayer.cpp  NeuralNetworkLayer.h  NeuralNetworkManager.cpp  NeuralNetworkManager.h  Neuron.cpp  Neuron.h  NeuronConnection.cpp  NeuronConnection.h  NeuronConnectionView.cpp  NeuronConnectionView.h  NeuronView.cpp  NeuronView.h  Node.cpp  Node.h  NodeConnection.cpp  NodeConnection.h  NodeConnectionView.cpp  NodeConnectionView.h  NodeNetwork.cpp  NodeNetwork.h  NodeNetworkLayer.cpp  NodeNetworkLayer.h  NodeNetworkLayerView.cpp  NodeNetworkLayerView.h  NodeNetworkView.cpp  NodeNetworkView.h  NodeView.cpp  NodeView.h
Project/UI/NodeNetwork/Node/: CMakeLists.txt  Neuron.cpp  Neuron.h  NeuronView.cpp  NeuronView.h  Node.cpp  Node.h  NodeConnection.cpp  NodeConnection.h  NodeConnectionView.cpp  NodeConnectionView.h  NodeView.cpp  NodeView.h
Project/UI/ViewController/: AbstractViewController.cpp  AbstractViewController.h  CMakeLists.txt
Project/UI/Widget/: AbstractWidget.cpp  AbstractWidget.h  CMakeLists.txt
Project/UI/WidgetManager/: WidgetManager.cpp  WidgetManager.h
Tests/: CMakeLists.txt
Tests/Core/: CMakeLists.txt
Tests/Core/NeuralNet/: CMakeLists.txt  IrisDataExtractor.h  NeuralNetTest.h  NeuralNetTestHelper.h
Tests/Core/NeuralNetwork/: CMakeLists.txt  NeuralNetworkTest.h
